# mailbox-rust

./: README
cicd/.github/workflows/: cd.yaml  ci.yaml  release.yaml
cicd/deployments/: values.yaml
cicd/deployments/templates/: configMap.yaml  deployment.yaml  secrets.yaml
mailbox/: .env.docker  .env.local  Cargo.toml  Dockerfile  Makefile  README.md  openapi.yaml
mailbox/.github/workflows/: mailbox-cd.yaml  mailbox-ci.yaml
mailbox/migrations/: 20230330014541_add_mailbox_table.down.sql  20230330014541_add_mailbox_table.up.sql  20230330015432_add_user_table.up.sql
mailbox/src/: dap.configurations  main.rs
mailbox/src/application/: app.rs  mailbox_api.rs  mailbox_app.rs  mod.rs  routers.rs  user_api.rs  user_app.rs
mailbox/src/domain/: mailbox.rs  mod.rs  user.rs
mailbox/src/infrastructure/: db.rs  mailbox_db.rs  mod.rs  user_db.rs
rustlib/: Cargo.toml
rustlib/.github/workflows/: release.yaml
rustlib/src/: lib.rs
rustlib/src/config/: mod.rs  vault.rs  vault_test.rs
rustlib/src/database/: postgresql.rs
rustlib/src/servers/http/: server.rs
terraform/.github/workflows/: vault.yaml
terraform/shared/vault/: lb.tf  variables.tf  varsions.tf  vault.tf  vpc.tf
terraform/staging/services/mailbox/: artifact_registry.tf  backend.tf  gke.tf  lb.tf  postgres.tf  service_account.tf  terraform.tfvars  variables.tf  vpc.tf
