[package]
name = "rustlib"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
vaultrs = "0.7.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
axum = "0.6.12"
tower-http = { version = "0.4.0", features = ["cors"] }
futures = "0.3"